# apple-notes-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: backup.rs  cli.rs  db.rs  fixture.rs  lib.rs  main.rs  model.rs  progress.rs  render.rs  tables.rs  transport.rs
src/snapshots/: apple_notes_cli__tables__tests__table_string_snapshot_no_color_fixed_width.snap
tests/: cli_snapshots.rs
tests/fixtures/: basic.json
tests/snapshots/: cli_snapshots__accounts_list.snap  cli_snapshots__backup_files.snap  cli_snapshots__backup_files_jobs_1.snap  cli_snapshots__folders_create_id.snap  cli_snapshots__folders_delete_requires_yes.snap  cli_snapshots__folders_list.snap  cli_snapshots__help.snap  cli_snapshots__notes_create_id.snap  cli_snapshots__notes_delete_requires_yes.snap  cli_snapshots__notes_list.snap  cli_snapshots__notes_list_folder.snap  cli_snapshots__notes_show_markdown.snap
