[package]
name = "apple-notes-cli"
version = "0.1.0"
edition = "2024"
description = "A fast, scriptable CLI for Apple Notes (read/write + backups)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/JaviSoto/apple-notes-cli"
homepage = "https://github.com/JaviSoto/apple-notes-cli"
keywords = ["apple", "notes", "cli", "backup"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "apple-notes"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
comfy-table = "7.2"
crossbeam-channel = "0.5"
flate2 = "1.0"
indicatif = "0.17"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
termimad = "0.31"
html2md = "0.2"
sanitize-filename = "0.5"
comrak = "0.23"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.41"
predicates = "3.1"
tempfile = "3.10"
walkdir = "2.5"
